--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,4 +1,4 @@
-title: micro:bit fine movements
+title: Sensing fine movements
 hero_image: images/banner.png
 description: Using more sensitive movements to trigger actions
 version: 4
